[package]
name = "jetson_line_simulator"
version = "0.1.0"
edition = "2021"
description = "1D Lattice Simulation for Jetson_Line: Ethical Neuromorphic Dynamics with CHURCH/FEAR/POWER/TECH."
authors = ["Neuromorph-GOD <auto_church@tree-of-life.org>"]
license = "MIT"
repository = "https://github.com/Doctor0Evil/Jetson-Line"
keywords = ["simulation", "neuromorphic", "ethics", "ecology", "dynamics"]
categories = ["simulation", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
chrono = "0.4"
thiserror = "1.0"
rand = "0.8"  # For controlled randomness in simulations

[dev-dependencies]
approx = "0.5"  # For floating-point assertions
